<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab2Intent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="map_name">MAP</string>
    <string name="tel_name">TEL</string>
    <string name="share_name">SHARE</string>
    <string name="web_name">WEB</string>
    <string name="sms_name">SMS</string>

</resources>
