<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity$PlaceholderFragment">

    <Button
        android:id="@+id/sms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_name"/>

    <Button
        android:id="@+id/tel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_name"
        android:layout_below="@id/sms_button"/>
    <Button
        android:id="@+id/web_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_name"
        android:layout_below="@id/tel_button"/>
    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_name"
        android:layout_below="@id/web_button"/>
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_name"
        android:layout_below="@id/map_button"/>

</RelativeLayout>
